--- a/co_mgmt.qmd
+++ b/co_mgmt.qmd
@@ -12,7 +12,13 @@ Since California is my state of residence, I have adapted and expanded this defi
 
 *Co-management is the embodiment of a consensual and collaborative relationship between Indigenous Peoples and settler state governments to share responsibility for the stewardship of coastal lands, waters, and wildlife. This stewardship recognizes the value that both Indigenous and Western ways of knowing hold and provides opportunity for Indigenous people to reclaim ancestral practices and authority to guide how humans interact with non-human communities.*
 
-It is important to note that co-management on the ground -- or rather, in the water -- looks quite different from place to place. My (partial) definition is aspirational in the sense that Indigenous People are not often granted real decision-making power or engaged in relationships rooted in consent. The following cases help to illuminate the complexity in current conservations around co-management.
+It is important to note that co-management on the ground -- or rather, in the water -- looks quite different from place to place. My (partial) definition is aspirational in the sense that Indigenous People are not often granted real decision-making power or engaged in relationships rooted in consent. The following cases help to illuminate the complexity in current conversations around co-management.
+
+### **Co Management Fact Summary**
+
+```{r}
+knitr::include_graphics(here::here("photos", "co_mgmt_brief.png"))
+```
 
 ## Deconstructing Management Regimes
 
@@ -54,13 +60,15 @@ knitr::include_graphics(here::here("photos", "two-eye.jpg"))
 
 **Dina Gilio-Whitaker. Beacon Press. 2019.**
 
-::: {style="float:left;position: relative; top: -20px;"}
+::: {style="float:right;position: relative;border: -20px"}
 ```{r}
 knitr::include_graphics(here::here("photos", "whitaker.jpg"))
 ```
 :::
 
-This book endeavors to reimagine contemporary environmental justice movements to account for the unique aspects of Indigenous experiences of colonization and genocide. This process, called "Indigenizing" by Gilio-Whitaker, goes beyond philosophical conversations and looks closely at how different grassroots movements and processes in environmental management work for (or against) self-determination and sovereignty for Indigenous people. It emphasizes the often overlooked role Indigenous people play in raising environmental consciousness, especially in California. It also examines the ways in which entities such as non-profits and other settler organizations can both help and hinder Indigenous self-determination. The book emphasizes the need for stronger coalitions that respect the power of Indigenous resistance to reimagine our relationships with the natural world. XXX
+This book endeavors to reimagine contemporary environmental justice movements to account for the unique aspects of Indigenous experiences of colonization and genocide. This process, called "Indigenizing" by Gilio-Whitaker, goes beyond philosophical conversations and looks closely at how different grassroots movements and processes in environmental management work for (or against) self-determination and sovereignty for Indigenous people. It emphasizes the often overlooked role Indigenous people play in raising environmental consciousness, especially in California. It also examines the ways in which entities such as non-profits and other settler organizations can both help and hinder Indigenous self-determination. The book emphasizes the need for stronger coalitions that respect the power of Indigenous resistance to reimagine our relationships with the natural world.
+
+
 
 ## Co-management Guidance and Cases
 
