--- a/co_mgmt.qmd
+++ b/co_mgmt.qmd
@@ -14,7 +14,7 @@ Since California is my state of residence, I have adapted and expanded this defi
 
 It is important to note that co-management on the ground -- or rather, in the water -- looks quite different from place to place. My (partial) definition is aspirational in the sense that Indigenous People are not often granted real decision-making power or engaged in relationships rooted in consent. The following cases help to illuminate the complexity in current conversations around co-management.
 
-### **Co Management Fact Summary**
+### **Co-Management Summary**
 
 ```{r}
 knitr::include_graphics(here::here("photos", "co_mgmt_brief.png"))
